loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: not found: value caseRose
caseRose = 0
^LoopStairs:2: error: not found: value caseRose
while (caseRose != 4) {
       ^LoopStairs:9: error: not found: value estSurRose
  if (estSurRose()) {
      ^LoopStairs:10: error: not found: value caseRose
    caseRose += 1;
    ^