loopfor.LoopStairs.scala.code
caseRose = 0
while (caseRose != 4) {
  if (estFaceMur()) {
    gauche(); avance(); droite();
  }
  else {
    avance();
  }
  if (estSurRose()) {
    caseRose += 1;
  }
}